--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -31,28 +31,28 @@
         app:layout_constraintTop_toBottomOf="@+id/companyEdit" />
 
     <EditText
-        android:id="@+id/editTextPhone"
+        android:id="@+id/telEdit"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/tel_hint"
         android:inputType="phone"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
+        app:layout_constraintStart_toStartOf="@+id/adressEdit"
+        app:layout_constraintTop_toBottomOf="@+id/adressEdit" />
 
     <EditText
-        android:id="@+id/editTextPhone2"
+        android:id="@+id/faxEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/fax_hint"
         android:inputType="phone"
-        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
+        app:layout_constraintStart_toStartOf="@+id/telEdit"
+        app:layout_constraintTop_toBottomOf="@+id/telEdit" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName5"
+        android:id="@+id/adressEdit"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -63,48 +63,48 @@
         app:layout_constraintTop_toBottomOf="@+id/postalEdit" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/emailEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
-        app:layout_constraintStart_toStartOf="@+id/editTextPhone2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />
+        app:layout_constraintStart_toStartOf="@+id/faxEdit"
+        app:layout_constraintTop_toBottomOf="@+id/faxEdit" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/urlEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/url_hint"
         android:inputType="textUri"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintStart_toStartOf="@+id/emailEdit"
+        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName7"
+        android:id="@+id/positionEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/position_hint"
         android:inputType="text"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintStart_toStartOf="@+id/urlEdit"
+        app:layout_constraintTop_toBottomOf="@+id/urlEdit" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName8"
+        android:id="@+id/nameEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/name_hint"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />
+        app:layout_constraintStart_toStartOf="@+id/positionEdit"
+        app:layout_constraintTop_toBottomOf="@+id/positionEdit" />
 
     <Button
         android:id="@+id/saveBtn"
@@ -112,8 +112,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/save_text"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />
+        app:layout_constraintStart_toStartOf="@+id/nameEdit"
+        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />
 
     <Button
         android:id="@+id/cancelBtn"
